# HomeLabPKI

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  config.yaml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py
app/api/: dependencies.py  notifications.py
app/api/routes/: auth.py  ca.py  cert.py  crl.py  csr.py  download.py
app/models/: __init__.py  auth.py  ca.py  certificate.py  config.py  crl.py  notification.py
app/services/: __init__.py  auth_service.py  ca_service.py  cert_service.py  crl_service.py  csr_service.py  notification_service.py  openssl_service.py  parser_service.py  smtp_service.py  yaml_service.py
app/static/css/: custom.css
app/static/js/: app.js  crl.js
app/templates/: about.html  base.html  dashboard.html  error.html  settings.html
app/templates/auth/: login.html
app/templates/ca/: create.html  detail.html  import-chain.html  import-intermediate.html  import-root.html  list.html
app/templates/cert/: create.html  csr-create.html  csr-detail.html  csr-import-signed.html  csr-list.html  detail.html  import.html  list.html  sign-csr.html
app/templates/email/: expiry_warning.html  expiry_warning.txt  test_email.html  test_email.txt
app/utils/: __init__.py  file_utils.py  logger.py  validators.py
app/web/: routes.py
scripts/: migrate_to_relative_paths.py
tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_ca_import.py  test_ca_service.py  test_cert_service.py  test_chain_import.py  test_chain_import_failures.py  test_crl_service.py  test_csr_service.py  test_csr_signing.py  test_formatting.py  test_import_validation.py  test_parser_service.py
tests/playwright/: conftest.py  test_auth.py
